# lexicon

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.stack.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/pm2/: run_api.sh  run_celery.sh  run_celerybeat.sh
src/lexicon/: __init__.py  _version.py  apps.py  celery.py
src/lexicon/admin/: __init__.py
src/lexicon/api/: constants.py  fields.py  file_upload.py  pagination.py  utils.py  views.py
src/lexicon/api/throttle/: __init__.py
src/lexicon/auth/: apps.py  exceptions.py  urls.py
src/lexicon/auth/service/: user_signup.py
src/lexicon/auth/views/: auth.py  email_signin.py  signin_base.py  user_signup.py
src/lexicon/conf/: asgi.py  nginx.conf  settings.py  urls.py  wsgi.py
src/lexicon/db/models/: base.py  series.py
src/lexicon/eventtypes/: __init__.py  base.py  manager.py  processor.py
src/lexicon/middleware/: current_user.py
src/lexicon/migrations/: 0001_initial.py  0002_video.py  0003_subtitle.py  0004_subtitle_end_time_subtitle_start_time_and_more.py
src/lexicon/models/: __init__.py  user.py
src/lexicon/static/css/: style.css
src/lexicon/tasks/: base.py
src/lexicon/templates/auth/: login.html  logout.html
src/lexicon/templates/video/: list.html
src/lexicon/utils/: __init__.py  app.py  auth.py  caching.py  datetime.py  storage.py
src/lexicon/video/: apps.py  extraction.py  urls.py
src/lexicon/video/admin/: __init__.py
src/lexicon/video/models/: __init__.py  subtitle.py  video.py
tests/: __init__.py
(+5 files in other folders)
