[tool.poetry]
name = "lexicon"
version = "0.1.0"
description = "Lexicon Applicaiton"
authors = ["Arun Kumar <arun.ku9555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.0.5"
django-configurations = "2.3.2"
django-environ = "0.8.1"
djangorestframework = "3.13.1"
celery = "5.2.7"
django-cors-headers = "3.11.0"
python-json-logger = "2.0.7"
psycopg2 = "2.9.3"
django-model-utils = "4.2.0"
djangorestframework-simplejwt = "5.0.0"
django-redis = "5.2.0"
aiofiles = "^24.1.0"
django-filter = "21.1"
gunicorn = "20.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.19.0"
black = "22.6.0"
isort = "5.12.0"
flake8 = "5.0.4"
poetry-plugin-export = "1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = ["src"]
extend_skip = ["migrations"]
